--- a/package.json
+++ b/package.json
@@ -16,28 +16,28 @@
   "devDependencies": {
     "@aws-sdk/types": "^3.40.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-strip": "^2.1.0",
     "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-strip": "^2.1.0",
     "@types/bluebird": "^3.5.36",
     "@types/bn.js": "^5.1.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27",
     "@types/mocha": "^9",
-    "@types/node": "^16",
-    "@xylabs/eslint-config": "2.1.6",
-    "@xylabs/ts-scripts": "^1.0.23",
-    "@xylabs/tsconfig": "^1.0.3",
+    "@types/node": "^17",
+    "@xylabs/eslint-config": "2.1.8",
+    "@xylabs/ts-scripts": "^1.0.24",
+    "@xylabs/tsconfig": "^1.0.5",
     "bn.js": "^5.2.0",
     "eslint": "^8",
     "express": "^4.17.2",
-    "jest": "^27.4.3",
+    "jest": "^27.4.5",
     "node-cache": "^5.1.2",
     "npm-package-json-lint": "^5.4.2",
     "npm-package-json-lint-config-default": "^3.0.0",
     "prettier": "^2.5.1",
-    "rollup": "^2.61.0",
+    "rollup": "^2.61.1",
     "rollup-plugin-typescript2": "^0.31.1",
-    "ts-jest": "^27.1.1",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "ts-toolbelt": "^9.6.0",
     "typescript": "^4"
@@ -68,6 +68,9 @@
   "main": "dist/node/index.js",
   "module": "dist/index.js",
   "name": "@xylabs/sdk-api-express-ecs",
+  "peerDependencies": {
+    "express": "^4"
+  },
   "private": false,
   "publishConfig": {
     "access": "public"
