--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.40.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-replace": "^3.0.0",
-    "@rollup/plugin-strip": "^2.1.0",
     "@types/bluebird": "^3.5.36",
     "@types/bn.js": "^5.1.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27",
     "@types/mocha": "^9",
     "@types/node": "^17",
-    "@xylabs/eslint-config": "2.1.8",
+    "@xylabs/eslint-config": "2.2.10",
+    "@xylabs/rollup-config": "^1.0.5",
     "@xylabs/ts-scripts": "^1.0.24",
     "@xylabs/tsconfig": "^1.0.5",
     "bn.js": "^5.2.0",
@@ -35,11 +33,10 @@
     "npm-package-json-lint": "^5.4.2",
     "npm-package-json-lint-config-default": "^3.0.0",
     "prettier": "^2.5.1",
-    "rollup": "^2.61.1",
-    "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "ts-toolbelt": "^9.6.0",
+    "tslib": "^2.3.1",
     "typescript": "^4"
   },
   "esm5": "dist/esm5/index.js",
@@ -85,7 +82,7 @@
   "scripts": {
     "compile": "rm -r -f dist && yarn compile-rollup && yarn compile-tsc",
     "compile-rollup": "rollup -c rollup.config.js",
-    "compile-tsc": "tsc -p tsconfig.build.json",
+    "compile-tsc": "tsc -p tsconfig.json",
     "lint-pkg": "npmPkgJsonLint .",
     "test": "jest"
   },
