--- a/package.json
+++ b/package.json
@@ -10,34 +10,37 @@
   },
   "description": "SDK for base code for Api repos that use express and deploy on AWS ECS",
   "dependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.49.0",
+    "@aws-sdk/client-secrets-manager": "^3.50.0",
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
-    "@aws-sdk/types": "^3.49.0",
+    "@aws-sdk/types": "^3.50.0",
     "@types/bluebird": "^3.5.36",
     "@types/bn.js": "^5.1.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27",
-    "@types/mocha": "^9",
-    "@types/node": "^17",
-    "@xylabs/eslint-config": "2.3.2",
-    "@xylabs/rollup-config": "^1.1.5",
-    "@xylabs/ts-scripts": "^1.0.39",
-    "@xylabs/tsconfig": "^1.0.9",
+    "@types/jest": "^27.4.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.16",
+    "@xylabs/eslint-config": "2.3.14",
+    "@xylabs/rollup-config": "^1.1.7",
+    "@xylabs/ts-scripts": "^1.0.43",
+    "@xylabs/tsconfig": "^1.0.12",
     "bn.js": "^5.2.0",
-    "eslint": "^8",
+    "copyfiles": "^2.4.1",
+    "eslint": "^8.8.0",
     "express": "^4.17.2",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "node-cache": "^5.1.2",
     "npm-package-json-lint": "^5.4.2",
     "npm-package-json-lint-config-default": "^3.0.0",
     "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.67.1",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.5.0",
     "ts-toolbelt": "^9.6.0",
     "tslib": "^2.3.1",
-    "typescript": "^4"
+    "typescript": "^4.5.5"
   },
   "esm5": "dist/esm5/index.js",
   "exports": {
@@ -68,7 +71,6 @@
   "peerDependencies": {
     "express": "^4"
   },
-  "private": false,
   "publishConfig": {
     "access": "public"
   },
@@ -80,11 +82,13 @@
     "uuid": "^8"
   },
   "scripts": {
+    "deploy": "yarn version patch -i && yarn npm publish",
     "lint-pkg": "npmPkgJsonLint .",
     "test": "jest"
   },
   "sideEffects": false,
   "type": "module",
   "types": "dist/index.d.ts",
-  "version": "1.0.11"
+  "version": "1.0.11",
+  "packageManager": "yarn@3.1.1"
 }
