--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "root": true,
-  "ignorePatterns": ["package.json"],
+  "ignorePatterns": ["package.json", "rollup.config.js"],
   "extends": [
     "@xylabs"
   ],
