--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "description": "SDK for base code for Api repos that use express and deploy on AWS ECS",
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.54.1",
+    "body-parser": "^1.20.0",
+    "express-mung": "^0.5.1",
+    "http-status-codes": "^2.2.0",
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
@@ -18,6 +21,7 @@
     "@types/bluebird": "^3.5.36",
     "@types/bn.js": "^5.1.0",
     "@types/express": "^4.17.13",
+    "@types/express-mung": "^0.5.2",
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
