--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@xylabs/rollup-config": "^1.1.15",
     "@xylabs/ts-scripts": "^1.0.53",
     "@xylabs/tsconfig": "^1.0.13",
+    "eslint": "^8.13.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "ts-jest": "^27.1.4",
