--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.2.0",
   "author": {
     "email": "support@xylabs.com",
     "name": "XY Labs Development Team",
@@ -32,17 +33,28 @@
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.3"
+    "typedoc": "^0.22.17",
+    "typescript": "^4.7.4"
   },
-  "esm5": "dist/esm5/index.js",
+  "browser": "dist/esm/browserIndex.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "docs": "dist/docs.json",
+  "types": "dist/esm/index.d.ts",
   "exports": {
     ".": {
-      "esm5": "./dist/esm5/index.js",
       "node": {
-        "import": "./dist/node-esm/index.js",
-        "require": "./dist/node/index.js"
+        "import": "./dist/esm/nodeIndex.js",
+        "require": "./dist/cjs/nodeIndex.js"
       },
-      "default": "./dist/index.js"
+      "browser": {
+        "import": "./dist/esm/browserIndex.js",
+        "require": "./dist/cjs/index.js"
+      },
+      "default": "./dist/esm/index.js"
+    },
+    "./dist/docs.json": {
+      "default": "./dist/docs.json"
     },
     "./package.json": "./package.json"
   },
@@ -57,8 +69,6 @@
     "express"
   ],
   "license": "LGPL-3.0",
-  "main": "dist/node/index.js",
-  "module": "dist/index.js",
   "name": "@xylabs/sdk-api-express-ecs",
   "peerDependencies": {
     "express": "^4"
@@ -74,12 +84,13 @@
     "uuid": "^8"
   },
   "scripts": {
-    "deploy": "yarn version patch -i && yarn npm publish",
+    "build": "yarn build:esm && yarn build:cjs && yarn gen:docs",
+    "build:cjs": "tsc -p tsconfig.build.cjs.json",
+    "build:esm": "tsc -p tsconfig.build.esm.json",
+    "gen:docs": "typedoc src/index.ts --json dist/docs.json",
     "lint-pkg": "npmPkgJsonLint .",
     "test": "jest"
   },
   "sideEffects": false,
-  "types": "dist/index.d.ts",
-  "version": "1.1.7",
   "packageManager": "yarn@3.1.1"
 }
