--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "typedoc": "^0.22.17",
     "typescript": "^4.7.4"
   },
-  "browser": "dist/esm/browserIndex.js",
+  "browser": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "docs": "dist/docs.json",
@@ -44,11 +44,11 @@
   "exports": {
     ".": {
       "node": {
-        "import": "./dist/esm/nodeIndex.js",
-        "require": "./dist/cjs/nodeIndex.js"
+        "import": "./dist/esm/index.js",
+        "require": "./dist/cjs/index.js"
       },
       "browser": {
-        "import": "./dist/esm/browserIndex.js",
+        "import": "./dist/esm/index.js",
         "require": "./dist/cjs/index.js"
       },
       "default": "./dist/esm/index.js"
