--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.1",
     "express-mung": "^0.5.1",
     "http-status-codes": "^2.2.0",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -29,6 +30,7 @@
     "@xylabs/tsconfig": "^1.0.14",
     "eslint": "^8.19.0",
     "jest": "^28.1.2",
+    "jest-extended": "^3.0.0",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
