--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.19.0",
     "jest": "^28.1.2",
     "jest-extended": "^3.0.0",
+    "jest-mock-extended": "^2.0.6",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
