--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.186.0",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-mung": "^0.5.1",
     "http-status-codes": "^2.2.0",
