--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-mung": "^0.5.1",
     "http-status-codes": "^2.2.0",
     "node-cache": "^5.1.2",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "winston-transport": "^4.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
