--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-mung": "^0.5.1",
     "http-status-codes": "^2.2.0",
     "node-cache": "^5.1.2",
+    "rollbar": "^2.25.2",
     "winston": "^3.8.2",
     "winston-transport": "^4.5.0"
   },
