--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "SDK for base code for Api repos that use express and deploy on AWS ECS",
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.186.0",
+    "@xylabs/assert": "^2.6.9",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
