--- a/package.json
+++ b/package.json
@@ -10,44 +10,51 @@
     "url": "https://github.com/xylabs/sdk-api-express-ecs-js/issues"
   },
   "description": "SDK for base code for Api repos that use express and deploy on AWS ECS",
-  "dependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.186.0",
-    "@xylabs/assert": "^2.6.9",
+  "devDependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.256.0",
+    "@types/express": "^4.17.16",
+    "@types/express-mung": "^0.5.2",
+    "@types/jest": "^29.2.6",
+    "@types/node": "^18.11.18",
+    "@xylabs/assert": "^2.6.16",
+    "@xylabs/eslint-config": "2.12.25",
+    "@xylabs/ts-scripts-yarn3": "^2.12.25",
+    "@xylabs/tsconfig": "^2.12.25",
     "body-parser": "^1.20.1",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
+    "eslint": "^8.32.0",
+    "express": "^4.18.2",
     "express-mung": "^0.5.1",
+    "express-serve-static-core": "^0.1.1",
     "http-status-codes": "^2.2.0",
+    "jest": "^29.4.0",
+    "jest-extended": "^3.2.3",
+    "jest-mock-extended": "^3.0.1",
     "node-cache": "^5.1.2",
-    "rollbar": "^2.25.2",
+    "rollbar": "^2.26.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
     "winston": "^3.8.2",
     "winston-transport": "^4.5.0"
   },
-  "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/express-mung": "^0.5.2",
-    "@types/jest": "^29.1.2",
-    "@types/node": "^18.8.3",
-    "@xylabs/eslint-config": "2.7.23",
-    "@xylabs/rollup-config": "^1.1.17",
-    "@xylabs/ts-scripts": "^2.7.23",
-    "@xylabs/tsconfig": "^2.7.23",
-    "eslint": "^8.25.0",
-    "jest": "^29.1.2",
-    "jest-extended": "^3.1.0",
-    "jest-mock-extended": "^3.0.1",
-    "prettier": "^2.7.1",
-    "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.4.0",
-    "typedoc": "^0.23.15",
-    "typescript": "^4.8.4"
+  "peerDependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.256.0",
+    "@xylabs/assert": "^2.6.16",
+    "body-parser": "^1.20.1",
+    "express": "^4",
+    "express-mung": "^0.5.1",
+    "express-serve-static-core": "^0.1.1",
+    "http-status-codes": "^2.2.0",
+    "node-cache": "^5.1.2",
+    "rollbar": "^2.26.1",
+    "winston": "^3.8.2",
+    "winston-transport": "^4.5.0"
   },
   "browser": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "docs": "dist/docs.json",
-  "types": "dist/esm/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "exports": {
     ".": {
       "node": {
@@ -77,9 +84,6 @@
   ],
   "license": "LGPL-3.0",
   "name": "@xylabs/sdk-api-express-ecs",
-  "peerDependencies": {
-    "express": "^4"
-  },
   "publishConfig": {
     "access": "public"
   },
@@ -91,14 +95,8 @@
     "uuid": "^8"
   },
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs && yarn gen:docs",
-    "build:cjs": "tsc -p tsconfig.build.cjs.json",
-    "build:esm": "tsc -p tsconfig.build.esm.json",
-    "coverage": "jest --coverage",
-    "gen:docs": "typedoc src/index.ts --json dist/docs.json",
-    "lint-pkg": "npmPkgJsonLint .",
-    "test": "jest"
+    "coverage": "jest --coverage"
   },
   "sideEffects": false,
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.3.1"
 }
