--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,5 +46,9 @@
   },
   "[markdown]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
-  }
+  },
+  "cSpell.words": [
+    "publint",
+    "tsup"
+  ]
 }
