--- a/package.json
+++ b/package.json
@@ -11,29 +11,32 @@
   },
   "description": "SDK for base code for Api repos that use express and deploy on AWS ECS",
   "devDependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.256.0",
-    "@types/express": "^4.17.16",
+    "@aws-sdk/client-secrets-manager": "^3.409.0",
+    "@swc/core": "^1.3.83",
+    "@types/express": "^4.17.17",
     "@types/express-mung": "^0.5.2",
-    "@types/jest": "^29.2.6",
-    "@types/node": "^18.11.18",
-    "@xylabs/assert": "^2.6.16",
-    "@xylabs/eslint-config": "2.12.25",
-    "@xylabs/ts-scripts-yarn3": "^2.12.25",
-    "@xylabs/tsconfig": "^2.12.25",
-    "body-parser": "^1.20.1",
-    "eslint": "^8.32.0",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.6.0",
+    "@xylabs/assert": "^2.10.11",
+    "@xylabs/eslint-config": "2.19.6",
+    "@xylabs/ts-scripts-yarn3": "^2.19.6",
+    "@xylabs/tsconfig": "^2.19.6",
+    "body-parser": "^1.20.2",
+    "eslint": "^8.49.0",
     "express": "^4.18.2",
     "express-mung": "^0.5.1",
     "http-status-codes": "^2.2.0",
-    "jest": "^29.4.0",
-    "jest-extended": "^3.2.3",
-    "jest-mock-extended": "^3.0.1",
+    "jest": "^29.6.4",
+    "jest-extended": "^4.0.1",
+    "jest-mock-extended": "^3.0.5",
     "node-cache": "^5.1.2",
-    "rollbar": "^2.26.1",
-    "ts-jest": "^29.0.5",
+    "publint": "^0.2.2",
+    "rollbar": "^2.26.2",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "winston": "^3.8.2",
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2",
+    "winston": "^3.10.0",
     "winston-transport": "^4.5.0"
   },
   "peerDependencies": {
@@ -48,28 +51,35 @@
     "winston": "^3.8.2",
     "winston-transport": "^4.5.0"
   },
-  "browser": "dist/esm/index.js",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
   "docs": "dist/docs.json",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "node": {
-        "import": "./dist/esm/index.js",
-        "require": "./dist/cjs/index.js"
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
       },
-      "browser": {
-        "import": "./dist/esm/index.js",
-        "require": "./dist/cjs/index.js"
-      },
-      "default": "./dist/esm/index.js"
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      }
     },
     "./dist/docs.json": {
       "default": "./dist/docs.json"
     },
+    "./cjs": {
+      "default": "./dist/index.js"
+    },
+    "./docs": {
+      "default": "./dist/docs.json"
+    },
+    "./esm": {
+      "default": "./dist/index.mjs"
+    },
     "./package.json": "./package.json"
   },
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "homepage": "https://xylabs.com",
   "keywords": [
     "xylabs",
@@ -93,6 +103,8 @@
     "uuid": "^8"
   },
   "scripts": {
+    "package-compile": "tsup && publint",
+    "package-recompile": "tsup && publint",
     "coverage": "jest --coverage"
   },
   "sideEffects": false,
