--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,11 @@
 {
   "compilerOptions": {
-    "declaration": true,
     "declarationDir": "./dist/types",
-    "declarationMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "incremental": true,
-    "noImplicitOverride": false,
-    "typeRoots": ["./node_modules/@types", "**/src/types"],
-    "types": [
-      "jest-extended",
-      "jest-sorted",
-      "jest",
-      "node"
-    ]
+    "incremental": false,
+    "typeRoots": []
   },
-  "exclude": ["**/dist", "**/node_modules"],
+  "exclude": [".*", "**/dist", "node_modules", "storybook-static", "build"],
   "extends": "@xylabs/tsconfig"
 }
