--- a/package.json
+++ b/package.json
@@ -113,5 +113,10 @@
   "dependencies": {
     "connect": "^3.7.0",
     "express-serve-static-core": "^0.1.1"
-  }
+  },
+  "volta": {
+    "node": "18.19.0",
+    "yarn": "1.22.19"
+  },
+  "type": "module"
 }
