--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/connect": "^3.4.38",
     "@types/express": "^4.17.21",
     "@types/express-mung": "^0.5.5",
+    "@types/express-serve-static-core": "^4.17.43",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.26",
     "@xylabs/assert": "^3.0.13",
@@ -111,8 +112,7 @@
   "sideEffects": false,
   "packageManager": "yarn@3.6.3",
   "dependencies": {
-    "connect": "^3.7.0",
-    "express-serve-static-core": "^0.1.1"
+    "connect": "^3.7.0"
   },
   "volta": {
     "node": "18.19.0",
