--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@xylabs/eslint-config": "3.5.2",
     "@xylabs/ts-scripts-yarn3": "^3.5.2",
     "@xylabs/tsconfig": "^3.5.2",
+    "@xylabs/tsconfig-jest": "^3.5.2",
     "body-parser": "^1.20.2",
     "eslint": "^8.57.0",
     "express": "^4.18.3",
