--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "url": "https://github.com/xylabs/sdk-api-express-ecs-js/issues"
   },
   "description": "SDK for base code for Api repos that use express and deploy on AWS ECS",
-  "devDependencies": {
+  "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.535.0",
+    "@xylabs/assert": "^3.0.14"
+  },
+  "devDependencies": {
     "@swc/core": "^1.4.8",
     "@types/connect": "^3.4.38",
     "@types/express": "^4.17.21",
@@ -19,7 +22,6 @@
     "@types/express-serve-static-core": "^4.17.43",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.30",
-    "@xylabs/assert": "^3.0.14",
     "@xylabs/eslint-config": "3.5.2",
     "@xylabs/ts-scripts-yarn3": "^3.5.2",
     "@xylabs/tsconfig": "^3.5.2",
