--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
   "description": "SDK for base code for Api repos that use express and deploy on AWS ECS",
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.535.0",
-    "@xylabs/assert": "^3.0.14"
+    "@xylabs/assert": "^3.0.14",
+    "body-parser": "^1.20.1",
+    "connect": "^3.7.0",
+    "express-mung": "^0.5.1",
+    "http-status-codes": "^2.2.0",
+    "node-cache": "^5.1.2",
+    "rollbar": "^2.26.1",
+    "winston": "^3.8.2",
+    "winston-transport": "^4.5.0"
   },
   "devDependencies": {
     "@swc/core": "^1.4.8",
@@ -46,15 +54,7 @@
     "winston-transport": "^4.7.0"
   },
   "peerDependencies": {
-    "body-parser": "^1.20.1",
-    "connect": "^3.7.0",
-    "express": "^4",
-    "express-mung": "^0.5.1",
-    "http-status-codes": "^2.2.0",
-    "node-cache": "^5.1.2",
-    "rollbar": "^2.26.1",
-    "winston": "^3.8.2",
-    "winston-transport": "^4.5.0"
+    "express": "^4"
   },
   "docs": "dist/docs.json",
   "types": "dist/index.d.ts",
