--- a/package.json
+++ b/package.json
@@ -1,82 +1,7 @@
 {
+  "name": "@xylabs/sdk-api-express-ecs",
   "version": "2.0.4",
-  "author": {
-    "email": "support@xylabs.com",
-    "name": "XY Labs Development Team",
-    "url": "https://xylabs.com"
-  },
-  "bugs": {
-    "email": "support@xylabs.com",
-    "url": "https://github.com/xylabs/sdk-api-express-ecs-js/issues"
-  },
   "description": "SDK for base code for Api repos that use express and deploy on AWS ECS",
-  "dependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.535.0",
-    "@xylabs/assert": "^3.0.14",
-    "body-parser": "^1.20.1",
-    "connect": "^3.7.0",
-    "express-mung": "^0.5.1",
-    "http-status-codes": "^2.2.0",
-    "node-cache": "^5.1.2",
-    "rollbar": "^2.26.1",
-    "winston": "^3.8.2",
-    "winston-transport": "^4.5.0"
-  },
-  "devDependencies": {
-    "@swc/core": "^1.4.8",
-    "@types/connect": "^3.4.38",
-    "@types/express": "^4.17.21",
-    "@types/express-mung": "^0.5.5",
-    "@types/express-serve-static-core": "^4.17.43",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
-    "@xylabs/eslint-config": "3.5.2",
-    "@xylabs/ts-scripts-yarn3": "^3.5.2",
-    "@xylabs/tsconfig": "^3.5.2",
-    "@xylabs/tsconfig-jest": "^3.5.2",
-    "body-parser": "^1.20.2",
-    "connect": "^3.7.0",
-    "eslint": "^8.57.0",
-    "express": "^4.18.3",
-    "express-mung": "^0.5.1",
-    "http-status-codes": "^2.3.0",
-    "jest": "^29.7.0",
-    "jest-extended": "^4.0.2",
-    "jest-mock-extended": "^3.0.5",
-    "node-cache": "^5.1.2",
-    "publint": "^0.2.7",
-    "rollbar": "^2.26.3",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "tsup": "^8.0.2",
-    "typescript": "^5.4.2",
-    "winston": "^3.12.0",
-    "winston-transport": "^4.7.0"
-  },
-  "peerDependencies": {
-    "express": "^4"
-  },
-  "docs": "dist/docs.json",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "node": {
-        "require": {
-          "types": "./dist/index.d.cts",
-          "default": "./dist/index.cjs"
-        },
-        "import": {
-          "types": "./dist/index.d.ts",
-          "default": "./dist/index.js"
-        }
-      }
-    },
-    "./package.json": "./package.json",
-    "./README.md": "./README.md"
-  },
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "homepage": "https://xylabs.com",
   "keywords": [
     "xylabs",
     "typescript",
@@ -86,28 +11,99 @@
     "api",
     "express"
   ],
-  "license": "LGPL-3.0",
-  "name": "@xylabs/sdk-api-express-ecs",
-  "publishConfig": {
-    "access": "public"
+  "homepage": "https://xylabs.com",
+  "bugs": {
+    "url": "https://github.com/xylabs/sdk-api-express-ecs-js/issues",
+    "email": "support@xylabs.com"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/xylabs/sdk-api-express-ecs-js.git"
   },
-  "resolutions": {
-    "uuid": "^8"
-  },
-  "scripts": {
-    "package-compile": "tsup && publint",
-    "package-recompile": "tsup && publint",
-    "coverage": "jest --coverage"
+  "license": "LGPL-3.0",
+  "author": {
+    "name": "XY Labs Development Team",
+    "email": "support@xylabs.com",
+    "url": "https://xylabs.com"
   },
   "sideEffects": false,
-  "packageManager": "yarn@4.1.1",
+  "type": "module",
+  "exports": {
+    ".": {
+      "node": {
+        "types": "./dist/node/index.d.ts",
+        "default": "./dist/node/index.mjs"
+      }
+    },
+    "./package.json": "./package.json",
+    "./README.md": "./README.md"
+  },
+  "main": "dist/node/index.mjs",
+  "module": "dist/node/index.mjs",
+  "types": "dist/node/index.d.ts",
+  "scripts": {
+    "coverage": "jest --coverage",
+    "package-compile": "tsup && publint",
+    "package-recompile": "tsup && publint"
+  },
+  "resolutions": {
+    "eslint": "9.14.0",
+    "uuid": "^8"
+  },
+  "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.693.0",
+    "@xylabs/assert": "^4.3.13",
+    "body-parser": "^1.20.3",
+    "connect": "^3.7.0",
+    "express-mung": "^0.5.1",
+    "http-status-codes": "^2.3.0",
+    "node-cache": "^5.1.2",
+    "rollbar": "^2.26.4",
+    "winston": "^3.17.0",
+    "winston-transport": "^4.9.0"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.9.2",
+    "@types/connect": "^3.4.38",
+    "@types/express": "^4.17.21",
+    "@types/express-mung": "^0.5.5",
+    "@types/express-serve-static-core": "^4.19.6",
+    "@types/node": "^22.9.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "@xylabs/eslint-config-flat": "^4.2.4",
+    "@xylabs/ts-scripts-yarn3": "^4.2.4",
+    "@xylabs/tsconfig": "^4.2.4",
+    "@xylabs/tsconfig-jest": "^4.1.0",
+    "@xylabs/vitest-extended": "^4.3.13",
+    "body-parser": "^1.20.3",
+    "connect": "^3.7.0",
+    "eslint": "^9.15.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "express": "^4.21.1",
+    "express-mung": "^0.5.1",
+    "http-status-codes": "^2.3.0",
+    "node-cache": "^5.1.2",
+    "publint": "^0.2.12",
+    "rollbar": "^2.26.4",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.3.5",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.5",
+    "vitest-mock-extended": "^2.0.2",
+    "winston": "^3.17.0",
+    "winston-transport": "^4.9.0"
+  },
+  "peerDependencies": {
+    "express": "^4"
+  },
+  "packageManager": "yarn@4.5.1",
   "volta": {
     "node": "18.19.0",
     "yarn": "1.22.19"
   },
-  "type": "module"
+  "publishConfig": {
+    "access": "public"
+  },
+  "docs": "dist/docs.json"
 }
