--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "@xylabs/assert": "^4.3.13",
     "body-parser": "^1.20.3",
     "connect": "^3.7.0",
-    "express-mung": "^0.5.1",
     "http-status-codes": "^2.3.0",
     "node-cache": "^5.1.2",
     "rollbar": "^2.26.4",
@@ -66,7 +65,6 @@
     "@swc/core": "^1.9.2",
     "@types/connect": "^3.4.38",
     "@types/express": "^4.17.21",
-    "@types/express-mung": "^0.5.5",
     "@types/express-serve-static-core": "^4.19.6",
     "@types/node": "^22.9.0",
     "@typescript-eslint/parser": "^8.15.0",
@@ -80,7 +78,7 @@
     "eslint": "^9.15.0",
     "eslint-import-resolver-typescript": "^3.6.3",
     "express": "^4.21.1",
-    "express-mung": "^0.5.1",
+    "express-response-middleware": "^2.1.0",
     "http-status-codes": "^2.3.0",
     "node-cache": "^5.1.2",
     "publint": "^0.2.12",
