--- a/package.json
+++ b/package.json
@@ -31,18 +31,20 @@
   "exports": {
     ".": {
       "node": {
-        "types": "./dist/node/index.d.ts",
+        "types": "./dist/types/index.d.ts",
         "default": "./dist/node/index.mjs"
+      },
+      "neutral": {
+        "types": "./dist/types/index.d.ts",
+        "default": "./dist/neutral/index.mjs"
       }
     },
     "./package.json": "./package.json",
     "./README.md": "./README.md"
   },
-  "main": "dist/node/index.mjs",
-  "module": "dist/node/index.mjs",
-  "types": "dist/node/index.d.ts",
+  "module": "./dist/neutral/index.mjs",
+  "types": "./dist/types/index.d.ts",
   "scripts": {
-    "coverage": "jest --coverage",
     "package-compile": "tsup && publint",
     "package-recompile": "tsup && publint"
   },
@@ -51,8 +53,8 @@
     "uuid": "^8"
   },
   "dependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.693.0",
-    "@xylabs/assert": "^4.3.13",
+    "@aws-sdk/client-secrets-manager": "^3.777.0",
+    "@xylabs/assert": "^4.7.11",
     "body-parser": "^1.20.3",
     "connect": "^3.7.0",
     "express-mung": "^0.5.1",
@@ -63,34 +65,32 @@
     "winston-transport": "^4.9.0"
   },
   "devDependencies": {
-    "@swc/core": "^1.9.2",
+    "@swc/core": "^1.11.13",
     "@types/connect": "^3.4.38",
     "@types/express": "^4.17.21",
     "@types/express-mung": "^0.5.5",
     "@types/express-serve-static-core": "^4.19.6",
-    "@types/node": "^22.9.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "@xylabs/eslint-config-flat": "^4.2.4",
-    "@xylabs/ts-scripts-yarn3": "^4.2.4",
-    "@xylabs/tsconfig": "^4.2.4",
-    "@xylabs/tsconfig-jest": "^4.1.0",
-    "@xylabs/vitest-extended": "^4.3.13",
+    "@types/node": "^22.13.14",
+    "@typescript-eslint/parser": "^8.28.0",
+    "@xylabs/eslint-config-flat": "^6.1.12",
+    "@xylabs/ts-scripts-yarn3": "^6.1.12",
+    "@xylabs/tsconfig": "^6.1.12",
+    "@xylabs/vitest-extended": "^4.7.11",
     "body-parser": "^1.20.3",
     "connect": "^3.7.0",
-    "eslint": "^9.15.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint": "^9.23.0",
+    "eslint-import-resolver-typescript": "^4.2.5",
     "express": "^4.21.1",
     "express-mung": "^0.5.1",
     "http-status-codes": "^2.3.0",
     "node-cache": "^5.1.2",
-    "publint": "^0.2.12",
+    "publint": "^0.3.9",
     "rollbar": "^2.26.4",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "tsup": "^8.3.5",
-    "typescript": "^5.6.3",
-    "vitest": "^2.1.5",
-    "vitest-mock-extended": "^2.0.2",
+    "tsup": "^8.4.0",
+    "typescript": "^5.8.2",
+    "vitest": "^3.0.9",
+    "vitest-mock-extended": "^3.0.1",
     "winston": "^3.17.0",
     "winston-transport": "^4.9.0"
   },
