--- a/package.json
+++ b/package.json
@@ -33,21 +33,13 @@
       "node": {
         "types": "./dist/types/index.d.ts",
         "default": "./dist/node/index.mjs"
-      },
-      "neutral": {
-        "types": "./dist/types/index.d.ts",
-        "default": "./dist/neutral/index.mjs"
       }
     },
     "./package.json": "./package.json",
     "./README.md": "./README.md"
   },
-  "module": "./dist/neutral/index.mjs",
+  "module": "./dist/node/index.mjs",
   "types": "./dist/types/index.d.ts",
-  "scripts": {
-    "package-compile": "tsup && publint",
-    "package-recompile": "tsup && publint"
-  },
   "resolutions": {
     "eslint": "9.14.0",
     "uuid": "^8"
@@ -83,6 +75,7 @@
     "express": "^4.21.1",
     "express-mung": "^0.5.1",
     "http-status-codes": "^2.3.0",
+    "knip": "^5.46.2",
     "node-cache": "^5.1.2",
     "publint": "^0.3.9",
     "rollbar": "^2.26.4",
@@ -97,7 +90,7 @@
   "peerDependencies": {
     "express": "^4"
   },
-  "packageManager": "yarn@4.5.1",
+  "packageManager": "yarn@4.8.0",
   "volta": {
     "node": "18.19.0",
     "yarn": "1.22.19"
